<resources>
    <string name="app_name">ArithmeticExpressionCalculator</string>
    <string name="inputExpression">Введите арифм. выражение:</string>
    <string name="answer">Узнать ответ</string>
    <string name="result">Ответ :</string>
    <string name="rpnString">Обратная польская запись:</string>
    <string name="inputHint">Введите выражение:</string>
    <string name="tv_result">Ответ:</string>
    <string name="tv_RPN">Обратная польская запись:</string>
    <string name="userString">Строка пользователя:</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="clear">clear</string>
    <string name="degree">^</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="unarMinus">унарный минус</string>
    <string name="four">4</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="three">3</string>
    <string name="otvet">Ответ:</string>
    <string name="opn">ОПН:</string>
    <string name="dot">.</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="divide">/</string>
    <string name="backspace">backspace</string>
    <string name="symbolX">×</string>
</resources>
